# mtf-calc

./: .gitignore  ARCHITECTURE.md  README.md  REFACTOR_PLAN.md  anchor-detection.md  app.py  auto.py  frequency-identification.md  main.py  plan.md  pyproject.toml  test_extract_profile.py  usaf1951-spec.md
mtf_calc/: __main__.py  application.py  config.py  page_render.py  server.py  workspace.py
mtf_calc/routes/: __init__.py  actions.py  config.py  pages.py  render.py  roi.py
mtf_calc/services/: __init__.py  workspace.py
mtf_calc/tools/: anchor_detect.py  anchor_prompt.md  edge_detection.py  make_crop.py  render_npy.py
mtf_calc/ui/: app.js  render.js  roi.js  styles.css  utils.js
src/mtf_calc/: __init__.py  __main__.py  _roi_picker_page.py  _roi_tools.py  _viz_host.py  anchor.py  app.py  io.py  models.py  mtf.py  pages.py  pipeline.py  profiles.py  routes.py  select.py  server.py  viz.py
src/mtf_calc/tools/: images.py  shell.py
src/mtf_calc/ui/: app.js  render.js  roi_picker.css  roi_picker.html  roi_picker.js  styles.css  utils.js
src/mtf_calc/workflow/: extract_rois.py  find_anchors.py  identify_bars.py  identify_scale.py
src/viewer/: __init__.py  _host.py  _viewer.py
ui/: index.html
