[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtf-calc"
version = "0.1.0"
description = "MTF measurement calculator"
requires-python = ">=3.10"
dependencies = [
    "numpy>=2.2.6",
]

[project.scripts]
mtf-calc = "mtf_calc.__main__:cli"


[tool.hatch.build.targets.wheel]
packages = ["src/mtf_calc"]
