[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mtf-calc"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.0",
    "numpy>=2.4.4",
    "pillow>=12.0.0",
    "pywebview>=5.4",
    "scipy>=1.16.3",
]

[tool.hatch.build.targets.wheel]
packages = [
    "src/mtf_calc",
    "src/viewer",
]

[tool.pyright]
include = ["main.py", "src"]
extraPaths = ["src"]

[dependency-groups]
dev = [
    "basedpyright>=1.39.0",
]
